--- a/Diyadoor Web/MainPage.css
+++ b/Diyadoor Web/MainPage.css
@@ -1,6 +1,5 @@
 ﻿body {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: large;
+    font-size: x-large;
 }
 
 header {
@@ -9,34 +8,34 @@ header {
     color: darkblue;
     margin-right: auto;
     margin-left: auto;
-    padding: 0px;
-    overflow:auto;
-    height: 345px;
+    padding: 0;
+    overflow: auto;
+    height: 326px;
 }
 
 h1 {
     font-size: 1.5em;
-    margin: 0.0em 0.5em 1.3em 1.8em;
+    margin: 0 0.5em 0.4em 1.8em;
     padding: 1px;
-    width: 1192px;
+    width: 1081px;
     height: 56px;
 }
 
 img {
-    margin: 1em 0.5em 1.6em 0em;
+    margin: 1em 0.5em 2.2em 0;
     width: 1016px;
 }
 
 nav {
-    width: 90%;
+    width: 79%;
     float: left;
     margin-left: auto;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
     nav ul {
         list-style-type:none;
-        width: 371px;
+        width: 652px;
         margin-left: auto;
         height: 30px;
     }
@@ -44,7 +43,7 @@ nav {
     nav li {
         float: left;
         margin-left: auto;
-        width: 0px;
+        width: 0;
     }
 
 main {
@@ -55,10 +54,10 @@ main {
 }
 
 footer {
-    width: 90%;
-    background-color: lemonchiffon;
+    width: 100%;
+    background-color: wheat;
     color: black;
-    margin-left: auto;
+    margin-left: 0;
     height: 100px;
-    padding: 10px;
+    padding: 0;
 }
